minor edits intro - Robin's comments, Shuku's citations

--- a/chapter3-fairness.tex
+++ b/chapter3-fairness.tex
@@ -1,7 +1,7 @@
 \chapter{Fairness}
 \label{ch:fairness}
 
-In recent years, the increased adoption of algorithmic systems into many realms of society has raised concerns about the harms and unfairness that such systems cause. Among these concerns, the issue of fairness in computing systems, in the decision support context, especially the systems that rely on machine learning and statistical tools, has gained a significant attention\cite{mitchell2021algorithmic}. This is particularly evident where high stakes decisions are made, ones that have significant real-world impact on individuals’ lives and livelihoods such as healthcare, public policy, and law enforcement.
+In recent years, the increased adoption of algorithmic systems into many realms of society has raised concerns about the harms and unfairness that such systems cause. Among these concerns, the issue of fairness in computing systems, in the decision support context, especially the systems that rely on machine learning and statistical tools, has gained a significant attention as Mitchell et al. (2021) discuss \cite{mitchell2021algorithmic}. This is particularly evident where high stakes decisions are made, ones that have significant real-world impact on individuals’ lives and livelihoods such as healthcare, public policy, and law enforcement.
 
 The discussion of fairness, justice, and equity is only one of the social aspects investigated and criticized in machine learning systems. Such problems have gained the attention of a multidisciplinary community from computer scientists in different fields (e.g., artificial intelligence, machine learning, etc. to social scientists and legal scholars that have started to study ``Fairness, Accountability, and Transparency'', and ``AI ethics'' in their fields.
 
@@ -10,17 +10,17 @@ This chapter provides a short overview of algorithmic fairness for classical mac
 \section{Fairness and Justice}
 \label{sec:fair_&_justice}
     
-    One of the most fundamental concepts in the pursuit of fairness both in the society and computing systems is an axiom traced to Aristotle: \textit{Equals should be treated equally, and unequals unequally, in proportion to relevant similarities and differences.} This axiom establishes a rule that defines similarities according to cases’ objective characteristics as opposed to the subjective perceptions of the judge, the maxim forces decisions to be consistent with this rule so that that equal users are treated equally before the law \cite{Gosepath2011equality}. Although ``treating unequals unequally'' is a vague sentence. 
+    One of the most fundamental concepts in the pursuit of fairness both in the society and computing systems is an axiom traced to Aristotle: \textit{Equals should be treated equally, and unequals unequally, in proportion to relevant similarities and differences.} This axiom establishes a rule that defines similarities according to cases’ objective characteristics as opposed to the subjective perceptions of the judge, the maxim forces decisions to be consistent with this rule so that that equal users are treated equally before the law (discussed by Gosepath S. (2011) \cite{Gosepath2011equality}). Although ``treating unequals unequally'' is a vague sentence. 
     
-    This issue is addressed in the scholarship on distributive justice by recognizing four classic principles: \textit{exogenous rights}, \textit{compensation}, \textit{reward}, and  \textit{fitness} discussed in Moulin \cite{Moulin:FairDivision}. Exogenous rights are the rightful external claims that the system should satisfy such as equal shares in a property defined by a contract. Compensation recognizes that fairness needs extra consideration where the costs are not equal. Affirmative action in college admission or in hiring are examples of this principle. The principle of the reward demands to gain benefits in proportion to contributions. For example, employees get increased bonuses according to their contributions to that organization.
+    This issue is addressed in the scholarship on distributive justice by recognizing four classic principles: \textit{exogenous rights}, \textit{compensation}, \textit{reward}, and  \textit{fitness} discussed in Moulin, Herve (2004) \cite{Moulin:FairDivision}. Exogenous rights are the rightful external claims that the system should satisfy such as equal shares in a property defined by a contract. Compensation recognizes that fairness needs extra consideration where the costs are not equal. Affirmative action in college admission or in hiring are examples of this principle. The principle of the reward demands to gain benefits in proportion to contributions. For example, employees get increased bonuses according to their contributions to that organization.
     
     The argument on fitness demands that resources go to those most fit to use, or in other words, whoever makes the best use of resources for the benefit of all. This idea is ideologically close to the concept of utilitarianism which favors a distribution that maximizes the overall utility (sum of the individual utilities), ignoring the needs of particular individuals. Fitness has a natural application in machine learning systems, specifically recommender systems as we deliver information (recommendation lists) to individuals based on their utility and fitness to users.
     
     Anti-discrimination law in the U.S. legal theory has given rise to such essential concepts as \textit{disparate impact}. Anti-discrimination law ensures that people are not denied certain benefits like housing, education, work, etc., based on \textit{protected characteristics} such as race, color, religion, gender, disability, age, or in many jurisdictions, sexual orientation. Using the disparate impact standard, a discriminatory action can be challenged legally based on the disproportionate adverse impact on a protected group, without showing the intent to discriminate.
     
-    Crenshaw (2018) \cite{clark2018demarginalizing} discusses that this legal framework is limited as it only focuses on discrimination on the basis of individual protected characteristics while people who suffer from the combination of protected characteristics have a hard time proving their case.
+    Clark, Kim E (2018) \cite{clark2018demarginalizing} discusses that this legal framework is limited as it only focuses on discrimination on the basis of individual protected characteristics while people who suffer from the combination of protected characteristics have a hard time proving their case.
     
-    Fairness and discrimination have been a topic of discussion for decades in other communities, such as educational testing, which has a large body of literature on fairness in their domain \cite{Hutchinson2019history}. Friedman et al. (1996) \cite{Friedman1996Bias} provides one of the earlier discussions on bias in computer systems and how technical decisions may result in biased effects when computer systems are used in the social context. 
+    Fairness and discrimination have been a topic of discussion for decades in other communities, such as educational testing, which has a large body of literature on fairness in their domain (explained by Hutchinson et al. (2019) \cite{Hutchinson2019history}). Friedman et al. (1996) \cite{Friedman1996Bias} provides one of the earlier discussions on bias in computer systems and how technical decisions may result in biased effects when computer systems are used in the social context. 
     
     In the last decade, fairness in machine learning has been a topic of interest in the research community and is being actively expanded in this field. In the following section, we will describe an introduction to this literature.
 
@@ -30,9 +30,9 @@ This chapter provides a short overview of algorithmic fairness for classical mac
     % \todo[inline]{more on the fairness concept}
     Fairness is a complex concept, and it does not encapsulate one definition. Algorithmic fairness as well is not one goal but rather a spectrum of different equity concerns. To understand algorithmic unfairness, we need to initially recognize the type of unfairness that happens in a system and understand the stakeholders (consumers, providers, etc.) affected by the harms caused by this unfairness. Only after taking these steps can we design methods to assess a system's unfairness and finally design approaches to diminish unfairness in that system.
     
-    Although researchers and practitioners should bear in mind that machine learning might not always provide a solution. Formulating fairness definitions in mathematical forms without considering the full meaning of such a social concept might not resolve the problem. Selbst et al. (2019) \cite{selbst2019fairness} refers to this issue as \textit{formalism trap} and identifies a number of other ``abstraction traps'' in fairness research. In addition to these traps, one should understand that fairness, in its foundation, is contextual and contestable. Additionally, incompatibility of different fairness notions \cite{friedler-impossibility-2021} implies that universal fairness is not an achievable (and even meaningful) concept.
+    Although researchers and practitioners should bear in mind that machine learning might not always provide a solution. Formulating fairness definitions in mathematical forms without considering the full meaning of such a social concept might not resolve the problem. Selbst et al. (2019) \cite{selbst2019fairness} refers to this issue as \textit{formalism trap} and identifies a number of other ``abstraction traps'' in fairness research. In addition to these traps, one should understand that fairness, in its foundation, is contextual and contestable. Additionally, incompatibility of different fairness notions implies that universal fairness is not an achievable (and even meaningful) concept (discussed by Friedler et al. (2021) \cite{friedler-impossibility-2021}).
     
-    Considering the discussed limitations, researchers identify specific ways in which they \textit{can} determine a system's (mathematically and reasonably definable) unfairness and try to develop tools to measure and mitigate unfairness in different domains. Much of the work in algorithmic fairness has been focused on classification, with a myriad of definitions that has been proposed. The key definitions are explained in \cite{mitchell2021algorithmic,barocas2016big,barocas2018fairness}.
+    Considering the discussed limitations, researchers identify specific ways in which they \textit{can} determine a system's (mathematically and reasonably definable) unfairness and try to develop tools to measure and mitigate unfairness in different domains. Much of the work in algorithmic fairness has been focused on classification, with a myriad of definitions that has been proposed. The key definitions are explained by Mitchell et al. (2021), and Barocas et al. (2016) in \cite{mitchell2021algorithmic,barocas2016big,barocas2018fairness}.
     
     To clarify unfairness definitions and apply the appropriate solutions to mitigate them, we need to break them down into different categories. And this categorization (along with their assigned names) is based on the type of harm (distributional or representational) that happens in a system, the location in the pipeline that it happens, and whether this harm is affecting individuals or groups of users and how unfairness is measured. In the following paragraphs, I will discuss these fairness definitions further.
 
@@ -40,9 +40,9 @@ This chapter provides a short overview of algorithmic fairness for classical mac
     
     \subsection{Individual \& Group Fairness}
         
-        When we assess the unfairness of a system, it is also important to identify whether individuals or groups of users are being affected. \textit{(\romannum{1})~Individual fairness} is concerned with the similar treatment of similar users. This normative principle requires that like cases should be treated alike \cite{binns2020conflict} which is a fairness notion that goes back to Aristotle. Cynthia Dwork (2012) \cite{Dwork2012individual} introduces the concept of individual fairness which posits that similar individuals with respect to the task at hand should be treated similarly or in other words should have similar probabilities of positive classification outcomes. One of the limitations of this method is the choice of similarity metric to compare individuals and whether this metric is unbiased. This method also doesn't place any requirement on the treatment of dissimilar individuals. Additionally, this method will not be able to violate individual fairness for highly dissimilar individuals. Another individual fairness definition was proposed by \cite{pmlr-v70-kearns17a} for the problem of candidate set selection from diverse incomparable source sets. Choosing candidates for a research position from a diverse research communities with incomparable research metrics (e.g. citation rates are different in different research communities) is an example of this problem. Meritocratic fairness requires that less qualified candidates are probabilistically almost never chosen over the more qualified candidates.
+        When we assess the unfairness of a system, it is also important to identify whether individuals or groups of users are being affected. \textit{(\romannum{1})~Individual fairness} as explained by Binns, Reuben (2020) in \cite{binns2020conflict}, is concerned with the similar treatment of similar users. This normative principle requires that like cases should be treated alike which is a fairness notion that goes back to Aristotle. Cynthia Dwork (2012) \cite{Dwork2012individual} introduces the concept of individual fairness which posits that similar individuals with respect to the task at hand should be treated similarly or in other words should have similar probabilities of positive classification outcomes. One of the limitations of this method is the choice of similarity metric to compare individuals and whether this metric is unbiased. This method also doesn't place any requirement on the treatment of dissimilar individuals. Additionally, this method will not be able to violate individual fairness for highly dissimilar individuals. Another individual fairness definition was proposed by Michael Kearns et al. (2017) \cite{pmlr-v70-kearns17a} for the problem of candidate set selection from diverse incomparable source sets. Choosing candidates for a research position from a diverse research communities with incomparable research metrics (e.g. citation rates are different in different research communities) is an example of this problem. Meritocratic fairness requires that less qualified candidates are probabilistically almost never chosen over the more qualified candidates.
         
-        \textit{(\romannum{2})~Group fairness} is concerned with ensuring different groups have comparable experiences with the system. These groups are formed based on sensitive attributes like race, gender, age, etc. The sensitive attribute definition is usually rooted in anti-discrimination laws\cite{barocas2016big}. This notion of fairness tries to ensure that algorithms don't impact the members of the protected group more adversely and disproportionately. Group-based methods of fairness has helped build the most prevalent structures to achieve and assess fairness ~\cite{zemel2013learning,kamishima2012fairness,kamiran2010discrimination,zhang2017anti}.
+        \textit{(\romannum{2})~Group fairness} is concerned with ensuring different groups have comparable experiences with the system. These groups are formed based on sensitive attributes like race, gender, age, etc. The sensitive attribute definition is usually rooted in anti-discrimination laws (discussed by Barocas et al. (2016) in \cite{barocas2016big}). This notion of fairness tries to ensure that algorithms don't impact the members of the protected group more adversely and disproportionately. Group-based methods of fairness has helped build the most prevalent structures to achieve and assess fairness ~\cite{zemel2013learning,kamishima2012fairness,kamiran2010discrimination,zhang2017anti}.
         
         \textbf{(\romannum{3})~WYSIWIG and WAE}
         
@@ -56,12 +56,12 @@ This chapter provides a short overview of algorithmic fairness for classical mac
         
      
     \subsection{Harm}
-        Algorithmic fairness in machine learning often addresses two significant issues: (1) distributional harms and (2) representational harms\cite{crawford2017trouble}. Distributional harm occurs when the positive or negative effects, outcomes, or resources are not distributed fairly among its subjects. Therefore someone is denied a benefit unfairly. While in representational harms, groups or individuals are not represented fairly by and in the system. The literature in algorithmic fairness mostly considers distributional harms and proposes to increase representational fairness to reduce it.
+        Algorithmic fairness in machine learning often addresses two significant issues: (1) distributional harms and (2) representational harms (discussed by Crawford, Kate (2017) in \cite{crawford2017trouble}). Distributional harm occurs when the positive or negative effects, outcomes, or resources are not distributed fairly among its subjects. Therefore someone is denied a benefit unfairly. While in representational harms, groups or individuals are not represented fairly by and in the system. The literature in algorithmic fairness mostly considers distributional harms and proposes to increase representational fairness to reduce it.
     
     \subsection{Disparate Treatment and Disparate Impact}
         
         \textit{Disparate Treatment} occurs when members of different groups are explicitly being treated differently \cite{barocas2016big}. This discrimination usually happens because the model has access to the sensitive attribute(s). Therefore omitting or hiding this information from the model might solve this problem.
-        Dwork et al. \cite{Dwork2012individual} discuss that ``fairness by unawareness'' that is achieving fairness through ignoring the protected group status does not work because group identity usually correlates with other variables \cite{Feldman2015} therefore allowing the model to pick up the differences through these variables. They suggest using individual fairness to address this issue through ``similarity with respect to task'', which may compensate for group differences. WAE-based methods such as statistical parity, or error parity try to remedy this issue by requiring that different groups experience positive decisions or erroneous outcomes at the same rate.
+        Dwork et al. \cite{Dwork2012individual} discuss that ``fairness by unawareness'' that is achieving fairness through ignoring the protected group status does not work because group identity usually correlates with other variables \cite{Feldman2015}, therefore, allowing the model to pick up the differences through these variables. They suggest using individual fairness to address this issue through ``similarity with respect to task'', which may compensate for group differences. WAE-based methods such as statistical parity, or error parity try to remedy this issue by requiring that different groups experience positive decisions or erroneous outcomes at the same rate.
         
         \textit{Disparate Impact} \cite{Feldman2015} occurs when the impact of the system's decisions is unfairly different for different groups. In machine learning, this idea is formalized through the concept of \textit{statistical parity}. The notion of Statistical or Demographic Parity requires that two groups with a different sensitive group have the same chance of getting a positive result. This notion has been discussed under other different names like independence \cite{barocas2018fairness}. Disparate impact is used as a test to measure unfairness in anti-classification law\cite{corbett2018measure} which is usually operationalized via the ``four-fifth rule''. This rule requires that the protected group pass rate should not be less than four-fifth (80\%) of the majority group pass rate. Disparate impact has a WAE (we are all equal) assumption, meaning fairness is achieved if all the groups (with similar characteristics) are treated similarly. This measure is used to ensure a ``fair'' representation of different groups in different tasks such as ranking\cite{singh2018fairness,zehlike2017fa,yang2017measuring}, and recommendation\cite{mehtora2018towards,ekstrand2018exploring}.
     
@@ -75,7 +75,7 @@ This chapter provides a short overview of algorithmic fairness for classical mac
         
         \textit{equalized odds} \cite{hardt2016equality} ensures the equality of both true positive (TPR) and false positive rates (FPR). Equality of positive predictive values, and \textit{calibration} \cite{Kleinberg:InherentTrade} which requires equality of well-calibrated scores for all the groups, are other group fairness objectives.
         
-        The previously described metrics are not the only metrics for this purpose. We can define error parity metrics on any margin of the confusion matrix \cite{mitchell2021algorithmic}. However, it is worth noting that, based on Chouldechova-Kleinberg theorem \cite{chouldechova2017fair,Kleinberg:InherentTrade}, we cannot equalize more than two error parity metrics unless the underlying base rates are equal or the classifier is perfect. There are other fundamental tradeoffs between other error party metrics as well, for example between calibration and error-based parity metrics \cite{pleiss2017fairness}. Aside from that, the WYSIWIG assumption behind these metrics is a strong assumption about the accuracy, since it assumes the ground truth is unbiased. However, in reality the recorded data can be biased. Error Parity has also been studied as error parity in recommendation algorithms\cite{ekstrand2018all,yao_huang_fatml-2017}.
+        The previously described metrics are not the only metrics for this purpose. We can define error parity metrics on any margin of the confusion matrix \cite{mitchell2021algorithmic}. However, it is worth noting that, based on Chouldechova-Kleinberg theorem \cite{chouldechova2017fair,Kleinberg:InherentTrade}, we cannot equalize more than two error parity metrics unless the underlying base rates are equal or the classifier is perfect. There are other fundamental tradeoffs between other error party metrics as well, for example between calibration and error-based parity metrics \cite{pleiss2017fairness}. Aside from that, the WYSIWIG assumption behind these metrics is a strong assumption about the accuracy, since it assumes the ground truth is unbiased. However, in reality the recorded data can be biased. Disparate Mistreatment has also been studied as error parity in recommendation algorithms by Ekstrand et al. (2018) and Yao et al. (2017) \cite{ekstrand2018all,yao_huang_fatml-2017}.
 
     
     \subsection{Anti-classification and Anti-subordination}
@@ -91,13 +91,13 @@ This chapter provides a short overview of algorithmic fairness for classical mac
         
         % \todo[inline]{create a plot or doodle and add and refer to it here.}
         
-        \textbf{(\romannum{1})~Society} or the outside world may be unfair. This type of bias is usually historical and ongoing. Redlining in United States housing policies \cite{rothstein2017color} is an example of this type of bias, which prevented Black Americans from home ownership in wealthier neighborhoods; neighborhoods with better amenities such as parks or better schools that improve the quality of life and childhood development. Due to such actions by private-sector and government policies, Black residents were prohibited from accessing the same opportunities for wealth building which has lead to significant racial disparity in wealth through home ownership and even disparate quality of education.
+        \textbf{(\romannum{1})~Society} or the outside world may be unfair. This type of bias is usually historical and ongoing. Redlining in United States housing policies \cite{rothstein2017color}, is an example of this type of bias, which prevented Black Americans from home ownership in wealthier neighborhoods; neighborhoods with better amenities such as parks or better schools that improve the quality of life and childhood development. Due to such actions by private-sector and government policies, Black residents were prohibited from accessing the same opportunities for wealth building which has lead to significant racial disparity in wealth through home ownership and even disparate quality of education.
         
         \textbf{(\romannum{2})~Data} is another source of bias. The data can get biased during the data collection process. In some cases, some people are more likely to respond to surveys or volunteer information. This type of bias is known as response or submission bias. Sampling strategies are used to collect a certain amount of data for a specific purpose might fail to collect a sample that is representative of the real data or the real world. This issue can contribute to representation bias. The previous issues may construct imbalanced data where the size of different users differ. In this case, the prediction/recommendation models may become more accurate for the groups with greater group sizes as they have more data while being more erroneous in predictions for smaller-sized groups.
         
         In the data collection process, sometimes the perspective of the people involved in the process can invite bias into the data, mainly if there is little engagement with the stakeholders (for whom we are providing a service) to understand their needs. These biases will go undetectable if there is not clear documentation of the perspectives and assumptions that went into its design \cite{Hutchinson2021Account}. Lack of documentation, becomes problematic particularly when such sensitive personal attributes such as gender or race are recorded. Categorization of such attributes like gender is usually adapted from administrative data collection which might not be inclusive of all the differences. Therefore, their categorization and how they are recorded vary over time as the social and cultural constructs evolve \cite{Hanna2020CriticalRace}. Therefore it is important to interpret the data according to its time and also according to the cultural and social contexts to avoid the previous biases and to avoid unfairly disregarding local knowledge and perspectives.
         
-        Mitchell \cite{mitchell2021algorithmic} differentiates between societal bias and systematic or statistical bias. Societal bias is the deviation between the \textit{world as it should and could be} and \textit{the world as it is}. Redlining is an example of societal bias since without this bias, the world could be different with Black residents living in any neighborhood. Statistical bias results in systematic discrepancies between \textit{the world as is} and \textit{the world that the data represents}. For example, if the records of housing information differs from the actual housing, it can cause a systematic mismatch.
+        Mitchell et al. (2021) \cite{mitchell2021algorithmic} differentiate between societal bias and systematic or statistical bias. Societal bias is the deviation between the \textit{world as it should and could be} and \textit{the world as it is}. Redlining is an example of societal bias since without this bias, the world could be different with Black residents living in any neighborhood. Statistical bias results in systematic discrepancies between \textit{the world as is} and \textit{the world that the data represents}. For example, if the records of housing information differs from the actual housing, it can cause a systematic mismatch.
         
         \textbf{(\romannum{3})~Models} can also exacerbate the existing unfairness or introduce unfairness. Models can learn to discriminate based on the sensitive attributes with or without having these attributes in the data. Models can indirectly learn the sensitive attributes based on the correlations of other variables with the sensitive attributes or the behavioral patterns associated with those attributes. The objective functions may also include biased perspectives about what constitutes a \textit{good} model and result in biased outcomes.
         
@@ -109,7 +109,7 @@ This chapter provides a short overview of algorithmic fairness for classical mac
     
     % \subsection{Mitigation methods}
     % To mitigate algorithmic unfairness, interventions can be made at different steps of the processing pipeline. \cite{Friedler2019} provides a broad overview of these methods.
-    \todo[inline]{A common section for fairness interventions for both ML and recsys}
+    % \todo[inline]{A common section for fairness interventions for both ML and recsys}
     
     The algorithmic fairness literature has identified several different constructs for measuring and reducing fairness, but these constructs are not always mathematically or conceptually compatible. This could be due to differences in their assumptions about the data, ethical goals, or social contexts. Therefore it is crucial to define and assess a specific problem setting in light of its full sociotechnical context. To define fairness for recommender systems, in addition to the previous categorizations, we also need to account for the unique challenges that arises in recommender systems: personalization and the multi-stakeholder problem. I will discuss these issues discussed in the following section \ref{sec:fairness_recsys}.
 
@@ -127,7 +127,7 @@ This chapter provides a short overview of algorithmic fairness for classical mac
         \noindent \paragraph{Personalization}
         \vspace{0.25cm}
     
-            Optimizing for personalization and increasing fairness are two objectives that are usually competitive \cite{modani2017fairness}. Increasing one comes at the cost of losing the other. On the one hand, the goal of personalization is to find the best item(s) for each user, while this list could be different for the users. On the other hand, fairness, for example, for providers is to provide them with equal exposure opportunities. To achieve provider-side fairness, one could divide the recommendation opportunities equally among providers. However, this action ignores the differences between user preferences or personalization. In this case, personalization for consumers and fairness for providers are conflicting goals and achieving one means sacrificing the other one.
+            Modani et al. (2017) \cite{modani2017fairness} discuss that Personalization and increasing fairness are two objectives that are usually competitive. Increasing one comes at the cost of losing the other. On the one hand, the goal of personalization is to find the best item(s) for each user, while this list could be different for the users. On the other hand, fairness, for example, for providers is to provide them with equal exposure opportunities. To achieve provider-side fairness, one could divide the recommendation opportunities equally among providers. However, this action ignores the differences between user preferences or personalization. In this case, personalization for consumers and fairness for providers are conflicting goals and achieving one means sacrificing the other one.
             
             Additionally accuracy is the main objective to optimize for to achieve personalization. We have discussed the effects of only increasing accuracy in recommender systems in the Introduction. One example is increasing accuracy while having the effect of popularity bias, and positive feedback loops in recommender systems cause the recommendations to be homogeneous in iterative environments \cite{Chaney2018}. These issues exacerbate the issue of popularity bias, further leading to both consumer unfairness and provider unfairness.
 
@@ -145,11 +145,11 @@ This chapter provides a short overview of algorithmic fairness for classical mac
         
             As mentioned previously, we cannot achieve a universally fair system. Therefore, for each problem, we must consider the target stakeholders, the definition of unfairness, and the specific metrics for measuring unfairness or integrating into a system to mitigate unfairness.
 
-            Lack of data to study fairness goals is another challenge. The appropriate data for this set of problems might require access to demographic information such as gender, age, race, etc., for stakeholder entities. However, sharing and using this data might have privacy, legal or ethical concerns. Crowd sourcing \cite{biega2020overview}, or professional annotation, integrating different datasets, using inference methods to impute demographic information, generating synthetic datasets \cite{burke2018synthetic}, or training algorithms without demographics\cite{Kallus2020Assessing} were proposed as solutions to address this issue. But, all of the previous solutions bring their specific limitations to the method. 
+            Lack of data to study fairness goals is another challenge. The appropriate data for this set of problems might require access to demographic information such as gender, age, race, etc., for stakeholder entities. However, sharing and using this data might have privacy, legal or ethical concerns. Crowd sourcing \cite{biega2020overview}, or professional annotation, integrating different datasets, using inference methods to impute demographic information, generating synthetic datasets~\cite{burke2018synthetic}, or training algorithms without demographics~\cite{Kallus2020Assessing} were proposed as solutions to address this issue. But, all of the previous solutions bring their specific limitations to the method. 
 
             One of the other critical challenges in this area is the domain-specificity of recommendation environments. The utilities delivered to each class of stakeholder are highly dependent on the type of item being recommended, the social function of the platform, and the interactions that it enables. It is not easy to find appropriate datasets for experimentation, and it is challenging to generalize across recommendation scenarios.
         
-    \subsection{Fairness for multi-stakeholders}
+    \subsection{Fairness for Multi-stakeholders}
     
         Fairness notions can be defined, assessed, and integrated into the algorithms for different stakeholders. We investigate the prior work for each stakeholder here and categorize them based on the previous fairness notions such as group fairness, individual fairness, etc.
 
