--- a/chapter6-postprocess.tex
+++ b/chapter6-postprocess.tex
@@ -1,4 +1,4 @@
-\chapter{Fairness through post-processing}
+\chapter{Fairness Through Post-processing}
 \label{ch:fairness_postproc}
 
 Post-processing is one way to integrate a fairness objective with an accuracy goal. This approach offers offer a number of advantages. Learned relevance or ranking models are often computationally costly, therefore, re-ranking can be used as an approach to constraint the large previously produced results to achieve other goals without re-training the model. Since the trade-off between accuracy and fairness can be tuned without re-learning the recommendation model, this is a suitable approach to control the fairness/accuracy balance. Additionally, researchers have found that re-ranking can achieve better trade-offs with accuracy with this type of model~\cite{abdollahpouri2019managing,liu2019personalized}. Compared to complex machine learning models, re-ranking approaches provide more transparency to the users of the system. Sonboli and Smith et al. \cite{Sonboli2021transparency} discuss the importance of transparency in the goals of the recommender system, particularly when the system has additional interventions (e.g. fairness) to the original model. Transparency in recommender systems has several benefits such as increasing users' trust in the system, allowing the users to detect and report any flaw or bias in the system, etc.
