--- a/main.tex
+++ b/main.tex
@@ -89,9 +89,7 @@
 
     \OnePageChapter	% because it is very short, Leave out the \OnePageChapter if your abstract runs over one page.
 
-	Often the abstract will be long enough to require more than one page, in which case the macro
-	``$\backslash$OnePageChapter'' should {\it not} be used.
-
+% 	A one page abstract will be added here.
 	}
 
 % \dedication[Dedication]{	% NEVER use \OnePageChapter here.
