--- a/refs.bib
+++ b/refs.bib
@@ -4777,6 +4777,20 @@ series = {WWW '21}
   organization={Springer}
 }
 
+@inproceedings{pleiss2017fairness,
+author = {Pleiss, Geoff and Raghavan, Manish and Wu, Felix and Kleinberg, Jon and Weinberger, Kilian Q.},
+title = {On Fairness and Calibration},
+year = {2017},
+isbn = {9781510860964},
+publisher = {Curran Associates Inc.},
+address = {Red Hook, NY, USA},
+booktitle = {Proceedings of the 31st International Conference on Neural Information Processing Systems},
+pages = {5684–5693},
+numpages = {10},
+location = {Long Beach, California, USA},
+series = {NIPS'17}
+}
+
 @inproceedings{Mobasher2001Rule,
 author = {Mobasher, Bamshad and Dai, Honghua and Luo, Tao and Nakagawa, Miki},
 title = {Effective Personalization Based on Association Rule Discovery from Web Usage Data},
